<resources>
    <string name="app_name">Cleaning &amp; Maintenance Services</string>
    <string name="title_activity_user_main">user_main</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="no_network">No Network</string>
    <string name="connect_to_net">Please connect to the Internet.</string>
    <string name="select_your_service">Select Your Service</string>
    <string name="maintenance">Maintenance</string>
    <string name="cleaning">Cleaning</string>
    <string name="unexpected_error">Unexpected Error Occurred!</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="agree_to">Agree to</string>
    <string name="phone">Phone:</string>
    <string name="enter_mobile_link">Please enter Your Mobile Number to Login or Register</string>
    <string name="login">Login</string>
    <string name="company_signup">Company SignUp</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="arabic_en" translatable="false">Arabic</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel_booking_item_msg">Are you sure you want to cancel this booking item ?</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="select_date_msg">Please Select Date First</string>
    <string name="end_time_msg">End Time must be after Start Time</string>
    <string name="select_start_msg">Please Select Start Time First</string>
    <string name="select_date_time">Please Select Date and Time</string>
    <string name="cancel_booking_msg">Are you sure you want to cancel this booking ?</string>
    <string name="company_name">Company Name</string>
    <string name="company_phone">Company Phone</string>
    <string name="about_company">About Company</string>
    <string name="company_logo">Company Logo</string>
    <string name="company_address">Company Address</string>
    <string name="about">About</string>
    <string name="select_image">Select Image</string>
    <string name="address">Address</string>
    <string name="error_msg">Failed to Communicate with Server or Request is taking too much time! Please check your internet connection or wait for server to respond.</string>
    <string name="close">Close</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="alert">Alert</string>
    <string name="permission_required">Permission Required</string>
    <string name="connection_suspended">Map Connection Suspended</string>
    <string name="connection_failed">Map Connection Failed</string>
    <string name="you">You</string>
    <string name="currency">Currency</string>
    <string name="aed">AED</string>
    <string name="usd">USD</string>
    <string name="rate_per_hour">Rate per hour</string>
    <string name="price">Price</string>
    <string name="company_hours">Company Hours</string>
    <string name="company_url">Company URL</string>
    <string name="end_time">To</string>
    <string name="url">URL</string>
    <string name="no_booking_present">No Booking Present</string>
    <string name="all_bookings">All Bookings</string>
    <string name="upcoming">Upcoming</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="select_end_time">Select End Time</string>
    <string name="map_location">Map Location</string>
    <string name="select_address">Select Address</string>
    <string name="language">Language</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="working_hours">Working Hours</string>
    <string name="start_time">From</string>
    <string name="title_activity_owner_home">Cleaning &amp; Maintenance</string>
    <string name="user_name">User Name</string>
    <string name="user_phone">03123456789</string>
    <string name="home">Home</string>
    <string name="manage_cleaners">Manage Cleaners</string>
    <string name="reviews">Reviews</string>
    <string name="clients">Clients</string>
    <string name="profile">Profile</string>
    <string name="be_a_professional">Be a Professional</string>
    <string name="faq">FAQ</string>
    <string name="date">Date</string>
    <string name="starting_time">Starting Time</string>
    <string name="term_amp_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="please_wait">Please Wait</string>
    <string name="contact_us">Contact Us</string>
    <string name="delete_employee">Delete Employee</string>
    <string name="delete_employee_msg">Are you sure you want to delete this employee?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_phone">Invalid Phone Number</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_cnic">Invalid CNIC</string>
    <string name="address_required">Address Required</string>
    <string name="select_picture">Select Picture</string>
    <string name="CropImage">Crop Image</string>
    <string name="finish">Finish</string>
    <string name="add_cleaner">Add Cleaner</string>
    <string name="select_gender">Select Gender</string>
    <string name="cnic">CNIC</string>
    <string name="select_services">Select Services</string>
    <string name="total_reviews">Total Reviews</string>
    <string name="rating">Rating:</string>
    <string name="client_detail">Client Detail</string>
    <string name="booking_history">Booking History</string>
    <string name="services">Services</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="requested_service">Requested Service</string>
    <string name="special_instruction">Special Instruction</string>
    <string name="assigned_cleaner">Assigned Cleaner</string>
    <string name="booking_items">Booking Items</string>
    <string name="show_on_map">Show On Map</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="navigate_to_client">Navigate To Client</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="status">Status</string>
    <string name="started_at">Started At</string>
    <string name="ended_at">Ended At</string>
    <string name="mark_finished">Mark Finished</string>
    <string name="search">Search</string>
    <string name="testimonials">Testimonials</string>

</resources>
