<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/itemBookingItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemBookingItemDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/mid"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDate"
                android:text="@string/start_time"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemBookingItemStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDate"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/mid"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtStart"
                android:text="@string/end_time"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemBookingItemEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtStart"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/mid"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/itemBookingItemStartAtTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtEnd"
                android:text="@string/started_at"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/itemBookingItemStartAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtEnd"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/mid"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/itemBookingItemEndAtTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemBookingItemStartAtTxt"
                android:text="@string/ended_at"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/itemBookingItemEndAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemBookingItemStartAtTxt"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/mid"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemBookingItemEndAtTxt"
                android:text="@string/status"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemBookingItemStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemBookingItemEndAtTxt"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/mid"
                android:textSize="16sp" />


            <Button
                android:id="@+id/itemBookingItemCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtStatus"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:layout_toStartOf="@+id/mid"
                android:background="@drawable/button"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <View
                android:id="@+id/mid"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/itemBookingItemFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/txtStatus"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/mid"
                android:background="@drawable/button"
                android:text="@string/mark_finished"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>